# SpectreBoard

./: .gitmodules  BUILD_STATUS.md  README.md  SPATIAL_MODEL_WIRING.md  SpacialModelBuilder.kt  SpectreBoard-Overview.md  gradle.properties
app/: build.gradle.kts  proguard-rules.pro
app/src/debug/res/values/: strings.xml
app/src/debugNoMinify/res/values/: clip_provider.xml  gesture_data.xml  strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: gru_vocab.txt
app/src/main/assets/dicts/: main_de_DE.dict  main_en_US.dict
app/src/main/assets/themes/: pixelteal.json
app/src/main/res/layout/: clipboard_history_view.xml  emoji_keyboard_page.xml  emoji_palettes_view.xml  input_view.xml  main_keyboard_frame.xml  more_suggestions.xml  popup_keys_keyboard.xml  popup_keys_keyboard_for_action_lxx.xml  strip_container.xml
app/src/main/res/values-af/: strings.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-az/: strings.xml
app/src/main/res/values-be/: strings.xml
app/src/main/res/values-bg/: strings.xml
app/src/main/res/values-bn/: strings.xml
app/src/main/res/values-ca/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-el/: strings.xml
app/src/main/res/values-en-rAU/: strings.xml
app/src/main/res/values-en-rCA/: strings.xml
app/src/main/res/values-en-rGB/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-es-rUS/: strings.xml
app/src/main/res/values-et/: strings.xml
fastlane/metadata/android/ar/: full_description.txt
fastlane/metadata/android/bg/: full_description.txt
fastlane/metadata/android/bn/: full_description.txt
fastlane/metadata/android/ca/: full_description.txt
fastlane/metadata/android/cs-CZ/: full_description.txt
fastlane/metadata/android/de-DE/: full_description.txt
fastlane/metadata/android/en-US/: full_description.txt
fastlane/metadata/android/es-ES/: full_description.txt
fastlane/metadata/android/et/: full_description.txt
fastlane/metadata/android/fi-FI/: full_description.txt
fastlane/metadata/android/fr-FR/: full_description.txt
fastlane/metadata/android/gl-ES/: full_description.txt
fastlane/metadata/android/hu-HU/: full_description.txt
fastlane/metadata/android/id/: full_description.txt
fastlane/metadata/android/is-IS/: full_description.txt
fastlane/metadata/android/it-IT/: full_description.txt
fastlane/metadata/android/iw-IL/: full_description.txt  title.txt
fastlane/metadata/android/nl-NL/: full_description.txt
fastlane/metadata/android/pl-PL/: full_description.txt
fastlane/metadata/android/pt/: full_description.txt
fastlane/metadata/android/pt-BR/: full_description.txt
fastlane/metadata/android/ru-RU/: full_description.txt
fastlane/metadata/android/ta-IN/: full_description.txt
fastlane/metadata/android/tr-TR/: full_description.txt
fastlane/metadata/android/uk/: full_description.txt
fastlane/metadata/android/zh-CN/: full_description.txt
scorer/cpp/: CMakeLists.txt  spectre_jni.cc  spectre_score.cc
(+414 files in other folders)
